--- a/routine.html
+++ b/routine.html
@@ -137,8 +137,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 
 <p><b>Daily Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td>6:00 AM </td><td>Turn on lights at full brightness to set circadian rhythm</td></tr>
-<tr><td>        </td><td>Molecular hydrogen, one tablet in one cup of water</td></tr>
+<tr><td>6:00 AM </td><td>Turn on lights at full brightness to help set circadian rhythm</td></tr>
 <!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td></tr>-->
 <tr><td>        </td><td>Rinse mouth with xylitol </td></tr>
 <tr><td>        </td><td>Run outside a few miles</td></tr>
@@ -147,20 +146,33 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr>        <td></td><td>Maragen ionic calcium in two cups of water</td></tr>-->
 <!--<tr><td>        </td><td>Start work, listen to AudioCardio app for one hour </td></tr>-->
 <!--<tr><td>      </td><td>Bilberry Extract, Pure Encapsulations, 1 capsule (Best taken before a meal)</td></tr>-->
+
 <tr><td>8:00 AM </td><td>Go outside in the sun a few minutes to set circadian rhythm</td></tr>
-<!--<tr><td>8:30 AM </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td></tr>-->
+<tr><td>        </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td></tr>
+<tr><td>        </td><td>Nitric Oxide Lozenge, Pneuma Nitric Oxide</td></tr>
+
+<tr><td>        </td><td><b>Morning supplements in powder form:</b></td></tr>
+<!--<tr><td>        </td><td>Fermented beet powder, 2 servings</td></tr>-->
+<tr><td>        </td><td>Pomegranate peel powder, 1/2 tsp</td></tr>
+<tr><td>        </td><td>Ceylon cinnamon powder, 1/2 tsp</td></tr>
+<tr><td>        </td><td>Parsley powder, 1/4 tsp</td></tr>
+<!--<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td></tr>-->
+<!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td></tr>-->
+<!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td></tr>-->
+
 <tr><td>9:00 AM </td><td>Breakfast</td></tr>
 <tr><td>        </td><td>Two pastured eggs and sunflower greens</td></tr>
-<tr><td>        </td><td>Blend avocado, frisee, radicchio, blackberries, cranberries, <!--pomegranate seeds, --> lime or lemon juice, water.</td></tr>
+<tr><td>        </td><td>Blend avocado, frisee, radicchio, blackberries, cranberries, <!--pomegranate seeds, --> lime juice, water.</td></tr>
 <tr><td>        </td><td>The prebiotic vegetables above are varied daily to create a diverse microbiome</td></tr>
-<tr><td>        </td><td>Olive oil, 1 tbsp</td></tr>
-<tr><td>        </td><td>Macadamia nuts</td></tr>
+<!--<tr><td>        </td><td>Olive oil, 1 tbsp</td></tr>-->
+<tr><td>        </td><td>Macadamia nuts, Pistacio nuts, Walnuts</td></tr>
 <!--<tr>        <td></td><td>Vegetable prebiotic mashup drink</td></tr>-->
+
 <tr><td>        </td><td><b>Morning supplements:</b></td></tr>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td></tr>
-<tr><td>        </td><td>Vitamin D3, Jarrow, 5000IU</td></tr>
+<tr><td>        </td><td>Vitamin D3, Jarrow, 10000IU</td></tr>
 <!--<tr><td>        </td><td>Krill Oil, Mercola, 1-2 capsules</td></tr>-->
-<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td></tr>
+<!--<tr><td>        </td><td>Magnesium Citrate, Pure Encapsulations, 1 capsule</td></tr>-->
 <tr><td>        </td><td>Perfect Amino, Body Health, 10 tablets</td></tr>
 <tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td></tr>
 <tr><td>        </td><td>Arterosil, Designs for Health, 1 capsule</td></tr>
@@ -169,30 +181,23 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9686558/" target="_blank">Link</a> </td></tr>
 <tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td></tr>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a> </td></tr>
-<!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>--></tr>
-<!--<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>--></tr>
-<tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td></tr>
+<tr><td>        </td><td>Cordyceps mushroom powder, Real Mushrooms</td></tr>
+<tr><td>        </td><td>5 Defenders mushroom powder, Real Mushrooms</td></tr>
 <tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td></tr>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td></tr>
+<!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>--></tr>
+<!--<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>--></tr>
+<!--<tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td></tr>-->
 <!--<tr><td>        </td><td>Matcha Power, Pure Synergy, 2 capsules</td></tr>-->
 <!--<tr><td>        </td><td>Cell Protector, Pure Synergy, 1 capsule</td></tr>-->
 <!--<tr><td>        </td><td>Rutin, Now Foods, 1 capsule</td></tr>-->
 <!--<tr><td>        </td><td>Longenesis, Energy Blueprint Labs, 6 capsules</td></tr>-->
 <!--<tr><td>        </td><td>Blue-Green Algae, Pure Synergy, 1 capsule</td></tr>-->
-<tr><td>        </td><td><b>Morning supplements in powder form:</b></td></tr>
-<tr><td>        </td><td>Fermented beet powder, 2 servings</td></tr>
-<tr><td>        </td><td>Pomegranate peel powder, 1/2 tsp</td></tr>
-<tr><td>        </td><td>Cordyceps mushroom powder, Real Mushrooms</td></tr>
-<tr><td>        </td><td>5 Defenders mushroom powder, Real Mushrooms</td></tr>
-<tr><td>        </td><td>Ceylon cinnamon powder, 1/2 tsp</td></tr>
-<tr><td>        </td><td>Parsley powder, 1/4 tsp</td></tr>
-<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td></tr>
-<!--<tr><td>        </td><td>Ginger powder, 1/2 tsp</td></tr>-->
-<!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td></tr>-->
-<!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td></tr>-->
+
+<tr><td>11:30 AM </td><td>Molecular hydrogen, one tablet in one cup of water</td></tr>
 <tr><td>12:00 PM </td><td>Lunch</td></tr>
 <tr><td>        </td><td>Turn on range hood vent while cooking for air quality</td></tr>
-<tr><td>        </td><td>Soup consisting of lentils, onion, leek, salmon, salt.</td></tr>
+<tr><td>        </td><td>Soup consisting of lentils, leek, salmon, salt.</td></tr>
 <tr><td>        </td><td>(Lentils are cooked in a pressure cooker to reduce lectins)</td></tr>
 <tr><td>        </td><td>Mixed leafy greens</td></tr>
 <tr><td>        </td><td>Olives</td></tr>
@@ -202,21 +207,25 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Go outside in the sun to produce dopamine in the eyes to prevent myopia</td></tr>
 <!--<tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face, no sunscreen</td></tr>-->
 <!--<tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td></tr>-->
-<tr><td>4:00 PM </td><td>Dinner, as early as possible</td></tr>
+
+<tr><td>4:30 PM </td><td>Dinner, as early as possible</td></tr>
 <tr><td>        </td><td>Chicken, pearled sorghum, steamed asparagus</td></tr>
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td></tr>
 <tr><td>        </td><td>Berries</td></tr>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td></tr>
+<tr><td>        </td><td>Nitric Oxide Lozenge, Pneuma Nitric Oxide</td></tr>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td></tr>
-<tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 1 capsule</td></tr>
+<tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 2 capsules</td></tr>
 <!--<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td></tr>-->
 <!--<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td></tr>-->
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td></tr>
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td></tr>-->
+
 <tr><td>        </td><td>Floss teeth </td></tr>
 <tr><td>        </td><td>Tounge scraper </td></tr>
 <tr><td>        </td><td>Hydro Floss with small amount of hydrogen peroxide </td></tr>
 <!--<tr><td>        </td><td>Sometimes dental oil pulling </td></tr>-->
+
 <tr><td>8:00 PM </td><td>Lights dimmed to prepare for sleep</td></tr>
 <!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td></tr>-->
 <tr><td>        </td><td>Turn off computer </td></tr>
