--- a/routine.html
+++ b/routine.html
@@ -153,19 +153,21 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 
 <tr><td>        </td><td><b>Morning supplements in powder form:</b></td></tr>
 <!--<tr><td>        </td><td>Fermented beet powder, 2 servings</td></tr>-->
-<tr><td>        </td><td>Pomegranate peel powder, 1/2 tsp</td></tr>
+<tr><td>        </td><td>Dried peppermint leaves, 2 tsp</td></tr>
+<tr><td>        </td><td>Dried oregano, marjoram, thyme, rosemary, basil, sage, 2 tsp</td></tr>
 <tr><td>        </td><td>Ceylon cinnamon powder, 1/2 tsp</td></tr>
+<tr><td>        </td><td>Pomegranate peel powder, 1/2 tsp</td></tr>
 <tr><td>        </td><td>Parsley powder, 1/4 tsp</td></tr>
 <!--<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td></tr>-->
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td></tr>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td></tr>-->
 
 <tr><td>9:00 AM </td><td>Breakfast</td></tr>
-<tr><td>        </td><td>Two pastured eggs and sunflower greens</td></tr>
+<tr><td>        </td><td>Shrimp, sunflower greens or carrots</td></tr>
 <tr><td>        </td><td>Blend avocado, frisee, radicchio, blackberries, cranberries, <!--pomegranate seeds, --> lime juice, water.</td></tr>
 <tr><td>        </td><td>The prebiotic vegetables above are varied daily to create a diverse microbiome</td></tr>
 <!--<tr><td>        </td><td>Olive oil, 1 tbsp</td></tr>-->
-<tr><td>        </td><td>Macadamia nuts, Pistacio nuts, Walnuts</td></tr>
+<tr><td>        </td><td>Macadamia nuts, pistacio nuts, walnuts</td></tr>
 <!--<tr>        <td></td><td>Vegetable prebiotic mashup drink</td></tr>-->
 
 <tr><td>        </td><td><b>Morning supplements:</b></td></tr>
@@ -181,8 +183,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9686558/" target="_blank">Link</a> </td></tr>
 <tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td></tr>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a> </td></tr>
-<tr><td>        </td><td>Cordyceps mushroom powder, Real Mushrooms</td></tr>
-<tr><td>        </td><td>5 Defenders mushroom powder, Real Mushrooms</td></tr>
+<tr><td>        </td><td>Cordyceps mushrooms, Real Mushrooms</td></tr>
+<tr><td>        </td><td>5 Defenders mushrooms, Real Mushrooms</td></tr>
 <tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td></tr>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td></tr>
 <!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>--></tr>
@@ -216,9 +218,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Nitric Oxide Lozenge, Pneuma Nitric Oxide</td></tr>
 <tr><td>        </td><td>Primal Multi, Designs for Health, 1 capsule</td></tr>
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 2 capsules</td></tr>
+<tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td></tr>
+<tr><td>        </td><td>Arterosil, Designs for Health, 1 capsule</td></tr>
 <!--<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td></tr>-->
 <!--<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td></tr>-->
-<tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td></tr>
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td></tr>-->
 
 <tr><td>        </td><td>Floss teeth </td></tr>
