--- a/routine.html
+++ b/routine.html
@@ -151,10 +151,11 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td></tr>
 <tr><td>        </td><td>Nitric Oxide Lozenge, Pneuma Nitric Oxide</td></tr>
 
-<tr><td>        </td><td><b>Morning supplements in powder form:</b></td></tr>
+<tr><td>        </td><td><b>Morning drink:</b></td></tr>
 <!--<tr><td>        </td><td>Fermented beet powder, 2 servings</td></tr>-->
-<tr><td>        </td><td>Dried peppermint leaves, 2 tsp</td></tr>
-<tr><td>        </td><td>Dried oregano, marjoram, thyme, rosemary, basil, sage, 2 tsp</td></tr>
+<tr><td>        </td><td>Dried peppermint powder, 1 tbs</td></tr>
+<tr><td>        </td><td>Dried spearmint powder, 1 tbs</td></tr>
+<tr><td>        </td><td>Dried oregano, marjoram, thyme, rosemary, basil, sage, 2 tbs</td></tr>
 <tr><td>        </td><td>Ceylon cinnamon powder, 1/2 tsp</td></tr>
 <tr><td>        </td><td>Pomegranate peel powder, 1/2 tsp</td></tr>
 <tr><td>        </td><td>Parsley powder, 1/4 tsp</td></tr>
