--- a/routine.html
+++ b/routine.html
@@ -151,14 +151,16 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Drink fermented beet kvass <a href="https://pubmed.ncbi.nlm.nih.gov/34256014/" target="_blank">Link</a></td></tr>
 <tr><td>        </td><td>Nitric Oxide Lozenge, Pneuma Nitric Oxide</td></tr>
 
+<tr><td>        </td><td></td></tr>
 <tr><td>        </td><td><b>Morning drink:</b></td></tr>
 <!--<tr><td>        </td><td>Fermented beet powder, 2 servings</td></tr>-->
-<tr><td>        </td><td>Dried peppermint powder, 1 tbs</td></tr>
-<tr><td>        </td><td>Dried spearmint powder, 1 tbs</td></tr>
+<tr><td>        </td><td>Dried peppermint leaves, 1 tbs</td></tr>
+<tr><td>        </td><td>Dried spearmint leaves, 1 tbs</td></tr>
 <tr><td>        </td><td>Dried oregano, marjoram, thyme, rosemary, basil, sage, 2 tbs</td></tr>
 <tr><td>        </td><td>Ceylon cinnamon powder, 1/2 tsp</td></tr>
 <tr><td>        </td><td>Pomegranate peel powder, 1/2 tsp</td></tr>
 <tr><td>        </td><td>Parsley powder, 1/4 tsp</td></tr>
+<tr><td>        </td><td>Psyllium Husk Powder, 1 tbs</td></tr>
 <!--<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td></tr>-->
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td></tr>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td></tr>-->
@@ -168,7 +170,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Blend avocado, frisee, radicchio, blackberries, cranberries, <!--pomegranate seeds, --> lime juice, water.</td></tr>
 <tr><td>        </td><td>The prebiotic vegetables above are varied daily to create a diverse microbiome</td></tr>
 <!--<tr><td>        </td><td>Olive oil, 1 tbsp</td></tr>-->
-<tr><td>        </td><td>Macadamia nuts, pistacio nuts, walnuts</td></tr>
+<tr><td>        </td><td>Macadamia nuts</td></tr>
 <!--<tr>        <td></td><td>Vegetable prebiotic mashup drink</td></tr>-->
 
 <tr><td>        </td><td><b>Morning supplements:</b></td></tr>
@@ -184,10 +186,11 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9686558/" target="_blank">Link</a> </td></tr>
 <tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td></tr>
 <tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9571518/" target="_blank">Link</a> </td></tr>
-<tr><td>        </td><td>Cordyceps mushrooms, Real Mushrooms</td></tr>
-<tr><td>        </td><td>5 Defenders mushrooms, Real Mushrooms</td></tr>
+<tr><td>        </td><td>Cordyceps Mushrooms, Real Mushrooms</td></tr>
+<tr><td>        </td><td>5 Defenders Mushrooms, Real Mushrooms</td></tr>
 <tr><td>        </td><td>Pomegranate Plus, Pure Encapsulations, 1 capsule</td></tr>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td></tr>
+<tr><td>        </td><td>Aged Garlic Extract, Kyolic, 2 capsules</td></tr>
 <!--<tr><td>        </td><td>TMG (Trimethylglycine), Life Extension, 1 capsule</td>--></tr>
 <!--<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td>--></tr>
 <!--<tr><td>        </td><td>Hyaluronic acid, Pure Encapsulations, 1 capsule</td></tr>-->
@@ -221,6 +224,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Magnesium Threonate, Dr. Mercola, 2 capsules</td></tr>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td></tr>
 <tr><td>        </td><td>Arterosil, Designs for Health, 1 capsule</td></tr>
+<tr><td>        </td><td>Aged Garlic Extract, Kyolic, 2 capsules</td></tr>
 <!--<tr><td>        </td><td>Tru Niagen Pro 300, ChromaDex, 1 capsule</td></tr>-->
 <!--<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td></tr>-->
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td></tr>-->
