--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="navbarPages" href="contact.html">
-                            Contact
+                        <a class="nav-link" id="navbarPages" href="routine.html">
+                            Routine
                         </a>
                     </li>
                 </ul>
@@ -126,23 +126,20 @@
               </div> <!-- / .row -->
           </div> <!-- / .container -->
       </section>
-      <br>
-      <br>
 
 
-    <!--
     <section class="pt-6 pt-md-8">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-8">
 
-            We are recruiting for a randomized clinical trial of VSEL stem cell treatment in patients with heart failure.  The trial will be in San Diego CA.  All treatment will be provided for free.  If you are interested in participating in this trial please contact us.
+            We are planning to open a medical clinic specializing in anti-aging treatments including plasmapheresis.  The first clinic will be in the San Francisco area.  Most clinics charge $6000 for the treatment.  We plan to charge $4000.
 
           </div>
         </div> 
       </div> 
     </section>
-    -->
+
 
     <!-- TESTIMONIALS -->
     <!--
