--- a/services.html
+++ b/services.html
@@ -108,10 +108,10 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="navbarPages" href="contact.html">
-                    Contact
-                </a>
-            </li>
+              <a class="nav-link" id="navbarPages" href="routine.html">
+                  Routine
+              </a>
+          </li>
         </ul>
 
           <!-- Button -->
@@ -150,22 +150,22 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-10">
 
-            Available now: <br />
+            Available soon: <br />
             <a href="plasma-dilution.html">Plasma Dilution</a> <br />
             <br />
 
-            Coming soon: <br />
+            Coming later: <br />
             EBOO/EBO2 + UV Blood Irradiation<br />
             <a href="young-plasma.html">Young Plasma</a> <br />
             <a href="vsels.html">VSEL Stem Cells</a> <br />
             Hyperbaric oxygen therapy <br />
             Galleri multi-cancer early detection <br />
             Lipoprotein apheresis <br />
-            Brain Frequency <br />
+            Brain Frequency Magnetic Stimulation<br />
             Transcranial Magnetic Stimulation <br />
             Neurofeedback from Peak Brain Institute<br />
-            <!-- Stellate Ganglion Block <br /> -->
             Deep Dive Medical Consultation <br />
+            <!-- Stellate Ganglion Block <br /> -->
             <br />
 
         </div>
