--- a/plasma-dilution.html
+++ b/plasma-dilution.html
@@ -91,8 +91,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="navbarPages" href="contact.html">
-                            Contact
+                        <a class="nav-link" id="navbarPages" href="routine.html">
+                            Routine
                         </a>
                     </li>
                 </ul>
