--- a/vsels.html
+++ b/vsels.html
@@ -87,8 +87,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="navbarPages" href="contact.html">
-                            Contact
+                        <a class="nav-link" id="navbarPages" href="routine.html">
+                            Routine
                         </a>
                     </li>
                 </ul>
