--- a/vsels_faq_old.html
+++ b/vsels_faq_old.html
@@ -91,6 +91,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" id="navbarPages" href="routine.html">
+                            Routine
+                        </a>
+                    </li>          
+                    <li class="nav-item">
                         <a class="nav-link" id="navbarPages" href="contact.html">
                             Contact
                         </a>
