--- a/routine.html
+++ b/routine.html
@@ -158,7 +158,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Nitric Oxide Lozenge, Pneuma Nitric Oxide</td></tr>
 
 <tr><td>        </td><td>&nbsp;</td></tr>
-<tr><td>        </td><td>Morning drink:</td></tr>
+<tr><td>        </td><td>Morning drink</td></tr>
 <!--<tr><td>        </td><td>Fermented beet powder, 2 servings</td></tr>-->
 <tr><td>        </td><td>Dried peppermint leaves, 1 tbs</td></tr>
 <tr><td>        </td><td>Dried spearmint leaves, 1 tbs</td></tr>
@@ -166,7 +166,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Ceylon cinnamon powder, 1/2 tsp</td></tr>
 <tr><td>        </td><td>Pomegranate peel powder, 1/2 tsp</td></tr>
 <tr><td>        </td><td>Parsley powder, 1/4 tsp</td></tr>
-<tr><td>        </td><td>Psyllium Husk Powder, 1 tbs</td></tr>
+<tr><td>        </td><td>Psyllium husk powder, 1 tbs</td></tr>
 <!--<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td></tr>-->
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td></tr>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td></tr>-->
@@ -182,20 +182,20 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr>        <td></td><td>Vegetable prebiotic mashup drink</td></tr>-->
 
 <tr><td>        </td><td>&nbsp;</td></tr>
-<tr><td>        </td><td>Morning supplements:</td></tr>
+<tr><td>        </td><td>Morning supplements</td></tr>
 <tr><td>        </td><td>Arterial Protect, Life Extension, 2 capsules</td></tr>
 <tr><td>        </td><td>Aged Garlic Extract, Kyolic, 2 capsules</td></tr>
 <tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9686558/" target="_blank">Link</a> </td></tr>
 <tr><td>        </td><td>Arterosil, Designs for Health, 1 capsule</td></tr>
 <tr><td>        </td><td>Astaxanthin, Designs For Health, 1 capsule <a href="https://pubmed.ncbi.nlm.nih.gov/35708049/" target="_blank">Link</a> </td></tr>  <!-- sandra kaufman, david minkoff video 4 years ago--> <!-- Interventions Testing Program showed it extended the lifespan of male mice by 12%-->
 <tr><td>        </td><td>Aswagandha, Tribe Organics, 1 capsule</td></tr>
-<tr><td>        </td><td>BDMC Curcumin, Prodrome Sciences, 2 capsules</td></tr>
 <tr><td>        </td><td>Biotin 5mg, Allergy Research Group, 1 capsule</td></tr>
 <tr><td>        </td><td>Black Cumin Seed Oil, Sports Nutrition, 1 capsule</td></tr>
 <tr><td>        </td><td>Boron, Pure Encapsulations, 1 capsule</td></tr>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td></tr>
 <tr><td>        </td><td>CocoaVia Cardio Health, 2 capsules</td></tr>
 <tr><td>        </td><td>Cordyceps Mushrooms, Real Mushrooms, 1 capsule</td></tr>
+<tr><td>        </td><td>Curcumin, Prodrome Sciences, 2 capsules</td></tr>
 <tr><td>        </td><td>Five Defenders Mushrooms, Real Mushrooms, 1 capsule</td></tr>
 <tr><td>        </td><td>Lithium, Pure Encapsulations, 1 capsule</td></tr>
 <tr><td>        </td><td>Lycopene 10 mg, NOW Foods, 1 capsule</td></tr>
@@ -224,7 +224,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>&nbsp;</td></tr>
 <tr><td>12:00 PM </td><td>Lunch</td></tr>
 <tr><td>        </td><td>Turn on range hood vent while cooking for air quality</td></tr>
-<tr><td>        </td><td>Soup consisting of lentils, leek, salmon, salt.</td></tr>
+<tr><td>        </td><td>Soup consisting of lentils, leeks, salmon, salt.</td></tr>
 <tr><td>        </td><td>(Lentils are cooked in a pressure cooker to reduce lectins)</td></tr>
 <tr><td>        </td><td>Mixed leafy greens</td></tr>
 <tr><td>        </td><td>Olives</td></tr>
@@ -241,6 +241,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td></tr>
 <tr><td>        </td><td>Berries</td></tr>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td></tr>
+
+<tr><td>        </td><td>&nbsp;</td></tr>
+<tr><td>        </td><td>Supplements:</td></tr>
 <tr><td>        </td><td>Aged Garlic Extract, Kyolic, 2 capsules</td></tr>
 <tr><td>        </td><td>Arterosil, Designs for Health, 1 capsule</td></tr>
 <tr><td>        </td><td>Broc Elite Plus, Mara Labs, 1 capsule</td></tr>
@@ -253,9 +256,11 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>NAC (N-Acetylcysteine), Life Extension, 3 capsules</td></tr>-->
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td></tr>-->
 
+<tr><td>        </td><td>&nbsp;</td></tr>
 <tr><td>        </td><td>Floss teeth </td></tr>
 <tr><td>        </td><td>Tounge scraper </td></tr>
 <tr><td>        </td><td>Hydro Floss with small amount of hydrogen peroxide </td></tr>
+<tr><td>        </td><td>BasicBites for enamel health </td></tr>
 <!--<tr><td>        </td><td>Sometimes dental oil pulling </td></tr>-->
 
 <tr><td>        </td><td>&nbsp;</td></tr>
@@ -298,8 +303,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>When Outside</b></p>
 <table style="celllpadding: 100px">
-<tr><td>        </td><td>If after 8AM apply mineral sunscreen to face and wear UV-blocking glasses </td></tr>
-<tr><td>        </td><td>If after 8AM Wear hat with wide brim to protect facial skin from UV light </td></tr>
+<!--<tr><td>        </td><td>If after 8AM apply mineral sunscreen to face and wear UV-blocking glasses </td></tr>-->
+<!--<tr><td>        </td><td>If after 8AM Wear hat with wide brim to protect facial skin from UV light </td></tr>-->
 <tr><td>        </td><td>Practice intermittent hypoxic training </td></tr>
 <tr><td>        </td><td>Look far away </td></tr>
 </table>
@@ -449,7 +454,6 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal acellular carbohydrates</td></tr>
 <tr><td> </td><td>Minimal linoleic acid</td></tr>
 <tr><td> </td><td>Minimal oxalates</td></tr>
-<tr><td> </td><td>Minimal dairy</td></tr>
 <tr><td> </td><td>Minimal protein powders</td></tr>
 <tr><td> </td><td>No whey protein powder</td></tr>
 <!--<tr><td> </td><td>Minimal iodine if hypothyroid</td></tr>-->
@@ -459,7 +463,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No eating the same foods every day</td></tr>
 <tr><td> </td><td>No grain-fed chicken, no Whole Foods chicken</td></tr>
 <tr><td> </td><td>No meat that contains Neu5Gc</td></tr>
-<tr><td> </td><td>No A1 dairy, goat or sheep is preferred</td></tr>
+<tr><td> </td><td>No A1 cow dairy.  Goat or sheep dairy is preferred</td></tr>
 <tr><td> </td><td>When cooking chicken use a thermometer to make sure it is 165°F </td></tr>
 <!-- no pre cut pre packaged salads per gundry -->
 <tr><td> </td><td>No chocolate with high heavy metals</td></tr>
