--- a/routine.html
+++ b/routine.html
@@ -158,7 +158,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Nitric Oxide Lozenge, Pneuma Nitric Oxide</td></tr>
 
 <tr><td>        </td><td>&nbsp;</td></tr>
-<tr><td>        </td><td>Morning drink</td></tr>
+<tr><td>        </td><td>Mix the following in a cup of water:</td></tr>
 <!--<tr><td>        </td><td>Fermented beet powder, 2 servings</td></tr>-->
 <tr><td>        </td><td>Dried peppermint leaves, 1 tbs</td></tr>
 <tr><td>        </td><td>Dried spearmint leaves, 1 tbs</td></tr>
