--- a/routine.html
+++ b/routine.html
@@ -504,6 +504,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 
 <tr><td> </td><td>No antioxidants after exercise-induced oxidant production</td></tr>
 
+<tr><td> </td><td>No sexual relations with a person that does not provide STD blood test results</td></tr>
+
 <!--<tr><td> </td><td>Do not put fingers in nose</td></tr> https://www.sciencealert.com/research-in-mice-suggests-a-surprising-link-between-nose-picking-and-alzheimers -->
 <!--<tr><td> </td><td>Do not blow nose with bathroom toilet paper</td></tr>-->
 <!--<tr><td> </td><td>Do not store toothbrush in bathroom</td></tr>-->
