--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-9 col-xl-8">
 
-            We are planning to open a medical clinic specializing in anti-aging treatments including plasmapheresis.  The first clinic will be in the San Francisco area.  Most clinics charge $6000 for the treatment.  We plan to charge $4000.
+            <!--We are planning to open a medical clinic specializing in anti-aging treatments including plasmapheresis.  The first clinic will be in the San Francisco area.  Most clinics charge $6000 for the treatment.  We plan to charge $4000.-->
 
           </div>
         </div> 
