--- a/routine.html
+++ b/routine.html
@@ -492,6 +492,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No carpet or vinyl floors, only hardwood floors</td></tr>
 <tr><td> </td><td>No gas stoves, use only electric</td></tr>
 <tr><td> </td><td>No fluorescent lights</td></tr>
+<tr><td> </td><td>No wearing shoes in the home</td></tr>
 
 <tr><td> </td><td>No camping or contact with outdoor high grass to avoid Lyme disease</td></tr>
 
