--- a/routine.html
+++ b/routine.html
@@ -463,7 +463,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No eating the same foods every day</td></tr>
 <tr><td> </td><td>No grain-fed chicken, no Whole Foods chicken</td></tr>
 <tr><td> </td><td>No meat that contains Neu5Gc</td></tr>
-<tr><td> </td><td>No A1 cow dairy.  Goat or sheep dairy is preferred</td></tr>
+<tr><td> </td><td>No A1 cow dairy.  Only consume fermented goat or sheep dairy</td></tr>
 <tr><td> </td><td>When cooking chicken use a thermometer to make sure it is 165°F </td></tr>
 <!-- no pre cut pre packaged salads per gundry -->
 <tr><td> </td><td>No chocolate with high heavy metals</td></tr>
