--- a/routine.html
+++ b/routine.html
@@ -163,10 +163,11 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Dried peppermint leaves, 1 tbs</td></tr>
 <tr><td>        </td><td>Dried spearmint leaves, 1 tbs</td></tr>
 <tr><td>        </td><td>Dried oregano, marjoram, thyme, rosemary, basil, sage, 2 tbs</td></tr>
+<tr><td>        </td><td>Psyllium husk powder, 1 tbs</td></tr>
+<tr><td>        </td><td>Oligofructose enriched inulin, Prebiotin, 1 tbs</td></tr>
+<tr><td>        </td><td>Parsley powder, 1/4 tsp</td></tr>
 <tr><td>        </td><td>Ceylon cinnamon powder, 1/2 tsp</td></tr>
 <tr><td>        </td><td>Pomegranate peel powder, 1/2 tsp</td></tr>
-<tr><td>        </td><td>Parsley powder, 1/4 tsp</td></tr>
-<tr><td>        </td><td>Psyllium husk powder, 1 tbs</td></tr>
 <!--<tr><td>        </td><td>Creatine powder, Thorne, 1 scoop</td></tr>-->
 <!--<tr><td>        </td><td>Sea Buckthorne powder, Loov Organic, 1 tsp</td></tr>-->
 <!--<tr><td>        </td><td>Apple peel powder, 1 tsp</td></tr>-->
