--- a/routine.html
+++ b/routine.html
@@ -461,9 +461,11 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No fluoridated water</td></tr>
 <tr><td> </td><td>Minimal caffeine</td></tr>
 <tr><td> </td><td>Minimal carbs at breakfast</td></tr>
+<tr><td> </td><td>Minimal fructose</td></tr>
+<tr><td> </td><td>No high sugar fruit</td></tr>
 <tr><td> </td><td>No eating the same foods every day</td></tr>
 <tr><td> </td><td>No grain-fed chicken, no Whole Foods chicken</td></tr>
-<tr><td> </td><td>No meat that contains Neu5Gc</td></tr>
+<tr><td> </td><td>No meat that contains Neu5Gc. Only fermented pork.</td></tr>
 <tr><td> </td><td>No A1 cow dairy.  Only consume fermented goat or sheep dairy</td></tr>
 <tr><td> </td><td>When cooking chicken use a thermometer to make sure it is 165°F </td></tr>
 <!-- no pre cut pre packaged salads per gundry -->
@@ -476,7 +478,6 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td> </td><td>No white toilet paper <a href="https://www.witpress.com/elibrary/wit-transactions-on-ecology-and-the-environment/78/14382" target="_blank">Link</a></td></tr>-->
 
 <tr><td> </td><td>Minimal chemicals</td></tr>
-<tr><td> </td><td>No dry cleaning, the chemicals cause Parkinsons disease</td></tr>
 <tr><td> </td><td>Minimal heavy metals</td></tr>
 <tr><td> </td><td>Minimal drugs</td></tr>
 <tr><td> </td><td>Minimal antibiotics</td></tr>
@@ -488,6 +489,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No EMFs, cordless phones, WIFI routers</td></tr>
 <tr><td> </td><td>Minimal x-rays and CT scans</td></tr>
 <tr><td> </td><td>Minimal TV</td></tr>
+<tr><td> </td><td>No dry cleaning, the chemicals cause Parkinsons disease</td></tr>
 <tr><td> </td><td>No living within 1000-2000 feet of a major freeway, for air quality</td></tr>
 
 <tr><td> </td><td>No carpet or vinyl floors, only hardwood floors</td></tr>
