--- a/routine.html
+++ b/routine.html
@@ -457,7 +457,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal oxalates</td></tr>
 <tr><td> </td><td>Minimal protein powders</td></tr>
 <tr><td> </td><td>No whey protein powder</td></tr>
-<!--<tr><td> </td><td>Minimal iodine if hypothyroid</td></tr>-->
+<!--<tr><td> </td><td>Minimal iodine if hypothyroid <a href="https://pubmed.ncbi.nlm.nih.gov/12728462/" target="_blank">Link</a> </td></tr>-->
 <tr><td> </td><td>No fluoridated water</td></tr>
 <tr><td> </td><td>Minimal caffeine</td></tr>
 <tr><td> </td><td>Minimal carbs at breakfast</td></tr>
