--- a/routine.html
+++ b/routine.html
@@ -497,6 +497,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No fluorescent lights</td></tr>
 <tr><td> </td><td>No wearing shoes in the home</td></tr>
 
+<tr><td> </td><td>No scented products</td></tr>
+<tr><td> </td><td>No incense</td></tr>
+
 <tr><td> </td><td>No camping or contact with outdoor high grass to avoid Lyme disease</td></tr>
 
 <tr><td> </td><td>No inbound mouth breathing</td></tr>
