--- a/routine.html
+++ b/routine.html
@@ -174,11 +174,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 
 <tr><td>        </td><td>&nbsp;</td></tr>
 <tr><td>9:00 AM </td><td>Breakfast</td></tr>
-<tr><td>        </td><td>Shrimp, sunflower greens or carrots</td></tr>
-<tr><td>        </td><td>Blend avocado, frisee, radicchio, blackberries, cranberries, <!--pomegranate seeds, --> lime juice, water.</td></tr>
+<tr><td>        </td><td>Carrot</td></tr>
+<tr><td>        </td><td>Shrimp with sunflower greens</td></tr>
+<tr><td>        </td><td>Blend avocado, endive, radicchio, blackberries, cranberries, <!--pomegranate seeds, --> lime juice, water.</td></tr>
 <tr><td>        </td><td>The prebiotic vegetables above are varied daily to create a diverse microbiome</td></tr>
 <!--<tr><td>        </td><td>Olive oil, 1 tbsp</td></tr>-->
-<tr><td>        </td><td>Fermented coconut yogurt</td></tr>
+<tr><td>        </td><td>Fermented macadamia nut yogurt</td></tr>
 <tr><td>        </td><td>Macadamia nuts</td></tr>
 <!--<tr>        <td></td><td>Vegetable prebiotic mashup drink</td></tr>-->
 
@@ -466,7 +467,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No eating the same foods every day</td></tr>
 <tr><td> </td><td>No grain-fed chicken, no Whole Foods chicken</td></tr>
 <tr><td> </td><td>No meat that contains Neu5Gc. Only fermented pork.</td></tr>
-<tr><td> </td><td>No A1 cow dairy.  Only consume fermented goat or sheep dairy</td></tr>
+<tr><td> </td><td>No A1 cow dairy.  Only A2 goat or sheep dairy</td></tr>
+<tr><td> </td><td>No unfermented dairy.  All dairy is fermented</td></tr>
 <tr><td> </td><td>When cooking chicken use a thermometer to make sure it is 165°F </td></tr>
 <!-- no pre cut pre packaged salads per gundry -->
 <tr><td> </td><td>No chocolate with high heavy metals</td></tr>
