--- a/routine.html
+++ b/routine.html
@@ -146,6 +146,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td></tr>-->
 <tr><td>        </td><td>Rinse mouth with xylitol </td></tr>
 <tr><td>        </td><td>Run outside a few miles</td></tr>
+<tr><td>        </td><td>Jump ten times for bone health</td></tr>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td></tr> <!-- before sunscreen else it blocks red/IR light?-->
 <!--<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td></tr>-->
 <!--<tr>        <td></td><td>Maragen ionic calcium in two cups of water</td></tr>-->
@@ -184,7 +185,14 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr>        <td></td><td>Vegetable prebiotic mashup drink</td></tr>-->
 
 <tr><td>        </td><td>&nbsp;</td></tr>
-<tr><td>        </td><td>Morning supplements</td></tr>
+<tr><td>        </td><td>Post meal routine:</td></tr>
+<tr><td>        </td><td>Glycine powder, Now Foods, about 4 grams</td></tr>
+<tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 1-2 ml</td></tr>
+<tr><td>        </td><td>Set timer for 40 minutes</td></tr>
+<tr><td>        </td><td>Brush teeth</td></tr>
+
+<tr><td>        </td><td>&nbsp;</td></tr>
+<tr><td>        </td><td>Morning supplements:</td></tr>
 <tr><td>        </td><td>Arterial Protect, Life Extension, 2 capsules</td></tr>
 <tr><td>        </td><td>Aged Garlic Extract, Kyolic, 2 capsules</td></tr>
 <tr><td>        </td><td>Annatto-E 300, Designs For Health, 1 capsules <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9686558/" target="_blank">Link</a> </td></tr>
@@ -231,11 +239,23 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Mixed leafy greens</td></tr>
 <tr><td>        </td><td>Olives</td></tr>
 <tr><td>        </td><td>Berries</td></tr>
+
 <!--<tr><td>        </td><td>Chew dark leafy greens slowly and thoroughly to maximize reduction of nitrate to nitrite</td></tr>-->
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td></tr>-->
 <tr><td>        </td><td>Go outside in the sun to produce dopamine in the eyes to prevent myopia</td></tr>
 <!--<tr><td>        </td><td>Lie outside in sun for 15 minutes, wear only shorts, cover face, no sunscreen</td></tr>-->
+
+<tr><td>        </td><td>&nbsp;</td></tr>
+<tr><td>        </td><td>Post meal routine:</td></tr>
+<tr><td>        </td><td>Glycine powder, Now Foods, about 4 grams</td></tr>
+<tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 1-2 ml</td></tr>
+<tr><td>        </td><td>Set timer for 40 minutes</td></tr>
+<tr><td>        </td><td>Brush teeth</td></tr>
+
 <!--<tr><td>3:00 PM </td><td>Non-Sleep Deep Rest <a href="https://www.youtube.com/watch?v=AKGrmY8OSHM" target="_blank">Link</a> + NuCalm <a href="https://www.nucalm.com/" target="_blank">Link</a></td></tr>-->
+
+<tr><td>        </td><td>&nbsp;</td></tr>
+<tr><td>4:30 PM </td><td>Jump ten times for bone health</td></tr>
 
 <tr><td>        </td><td>&nbsp;</td></tr>
 <tr><td>4:30 PM </td><td>Dinner, as early as possible</td></tr>
@@ -259,6 +279,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Brisk walk outside for glucose uptake</td></tr>-->
 
 <tr><td>        </td><td>&nbsp;</td></tr>
+<tr><td>        </td><td>Post meal routine:</td></tr>
+<tr><td>        </td><td>Glycine powder, Now Foods, about 4 grams</td></tr>
+<tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 1-2 ml</td></tr>
+<tr><td>        </td><td>Set timer for 40 minutes</td></tr>
+<tr><td>        </td><td>Brush teeth</td></tr>
+
 <tr><td>        </td><td>Floss teeth </td></tr>
 <tr><td>        </td><td>Tounge scraper </td></tr>
 <tr><td>        </td><td>Hydro Floss with small amount of hydrogen peroxide </td></tr>
@@ -283,10 +309,15 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>At every meal</b></p>
 <table style="celllpadding: 100px">
-<tr><td>        </td><td>At the start of the meal, glycine powder, Vital Nutrients, about 4 grams</td></tr>
-<tr><td>        </td><td>Blood Vessel Formula, Gladdin Longevity, 1-2 ml</td></tr>
 <tr><td>        </td><td>Eat slowly, chew well, be in a parasympathetic state</td></tr>
 <tr><td>        </td><td>Brush teeth 30-40 minutes after eating.  45-degree angle, make circles, be gentle, look at gums.</td></tr>
+</table>
+
+<br>
+<p><b>Post meal dental routine</b></p>
+<table style="celllpadding: 100px">
+    <tr><td>        </td><td>Brush teeth using 45-degree angle, make circles, be gentle.  Wait 30-40 minutes after eating</td></tr>
+    <tr><td>        </td><td>Brush tounge</td></tr>
 </table>
 
               
