--- a/routine.html
+++ b/routine.html
@@ -325,10 +325,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <p><b>Throughout the day</b></p>
 <table style="celllpadding: 100px">
 <tr><td> </td><td>Stand at a standup desk as long as possible while working</td></tr>
+<tr><td> </td><td>Every half hour sprint 20 seconds </td></tr>
 <tr><td> </td><td>Maintain correct spine posture</td></tr>
-<tr><td> </td><td>Various short exercises </td></tr>
-<tr><td> </td><td>Go outside</td></tr>
-<tr><td> </td><td>Drink water </td></tr>
+<tr><td> </td><td>Go outside a few minutes</td></tr>
+<!--<tr><td> </td><td>Drink water </td></tr>-->
 <!--<tr><td> </td><td>Jump for lymphatic system and to correct posture</td></tr>-->
 <!--<tr><td> </td><td>4-7-8 breathing</td></tr>-->
 </table>
