--- a/routine.html
+++ b/routine.html
@@ -486,7 +486,10 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal flour</td></tr>
 <tr><td> </td><td>Minimal acellular carbohydrates</td></tr>
 <tr><td> </td><td>Minimal linoleic acid</td></tr>
+<tr><td> </td><td>Minimal lectins</td></tr>
 <tr><td> </td><td>Minimal oxalates</td></tr>
+<tr><td> </td><td>Minimal nightshades</td></tr>
+<!--<tr><td> </td><td>Minimal aquaporins</td></tr>-->
 <tr><td> </td><td>Minimal protein powders</td></tr>
 <tr><td> </td><td>No whey protein powder</td></tr>
 <!--<tr><td> </td><td>Minimal iodine if hypothyroid <a href="https://pubmed.ncbi.nlm.nih.gov/12728462/" target="_blank">Link</a> </td></tr>-->
@@ -494,12 +497,12 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Minimal caffeine</td></tr>
 <tr><td> </td><td>Minimal carbs at breakfast</td></tr>
 <tr><td> </td><td>Minimal fructose</td></tr>
-<tr><td> </td><td>No high sugar fruit</td></tr>
-<tr><td> </td><td>No eating the same foods every day</td></tr>
-<tr><td> </td><td>No grain-fed chicken, no Whole Foods chicken</td></tr>
-<tr><td> </td><td>No meat that contains Neu5Gc. Only fermented pork.</td></tr>
+<tr><td> </td><td>No high sugar fruits, berries are preferred</td></tr>
+<!--<tr><td> </td><td>No eating the same foods every day</td></tr>-->
+<tr><td> </td><td>No grain and lectin fed chicken, no Whole Foods chicken</td></tr>
+<tr><td> </td><td>No meat that contains Neu5Gc. Only fermented meat</td></tr>
 <tr><td> </td><td>No A1 cow dairy.  Only A2 goat or sheep dairy</td></tr>
-<tr><td> </td><td>No unfermented dairy.  All dairy is fermented</td></tr>
+<tr><td> </td><td>No unfermented dairy</td></tr>
 <tr><td> </td><td>When cooking chicken use a thermometer to make sure it is 165°F </td></tr>
 <!-- no pre cut pre packaged salads per gundry -->
 <tr><td> </td><td>No chocolate with high heavy metals</td></tr>
