--- a/routine.html
+++ b/routine.html
@@ -406,7 +406,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>Decade Routine</b></p>
 <table style="celllpadding: 100px">
-<tr><td> </td><td>Heidelberg Hydrochloric Acid Test </td></tr>
+    <tr><td> </td><td>Heidelberg Hydrochloric Acid test </td></tr>
 </table>
 
 <br>
@@ -455,8 +455,9 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 </table>
 
 <br>
-<p><b>One-time setup</b></p>
+<p><b>One-time</b></p>
 <table style="celllpadding: 100px">
+<tr><td> </td><td>Polysomnography at a sleep lab</td></tr>
 <tr><td> </td><td>Kitchen water filter <a href="https://shop.ophorawater.com/collections/point-of-use-systems/products/bio-renew-system" target="_blank">Link</a></td></tr>
 <tr><td> </td><td>Whole house water filter <a href="https://shop.ophorawater.com/collections/whole-home-systems/products/ophora-uf-filtration-series" target="_blank">Link</a></td></tr>
 <tr><td> </td><td>Whole house air filter <a href="https://www.intellipure.com/product/ultrafine-whole-house-air-cleaner/" target="_blank">Link</a></td></tr>
@@ -551,7 +552,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 
 <!--<tr><td> </td><td>Do not put fingers in nose</td></tr> https://www.sciencealert.com/research-in-mice-suggests-a-surprising-link-between-nose-picking-and-alzheimers -->
 <!--<tr><td> </td><td>Do not blow nose with bathroom toilet paper</td></tr>-->
-<!--<tr><td> </td><td>Do not store toothbrush in bathroom</td></tr>-->
+<tr><td> </td><td>Close toilet lid before flushing</td></tr>
+<tr><td> </td><td>Do not store toothbrush or water flosser close to a toilet</td></tr>
 </table>
               
 <br>
