--- a/routine.html
+++ b/routine.html
@@ -145,7 +145,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>6:00 AM </td><td>Turn on lights at full brightness to help set circadian rhythm</td></tr>
 <!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td></tr>-->
 <tr><td>        </td><td>Rinse mouth with xylitol </td></tr>
-<tr><td>        </td><td>Run outside a few miles</td></tr>
+<tr><td>        </td><td>Run outside a few miles.  Early to avoid UV radiation.</td></tr>
 <tr><td>        </td><td>Jump ten times for bone health</td></tr>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td></tr> <!-- before sunscreen else it blocks red/IR light?-->
 <!--<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td></tr>-->
@@ -336,8 +336,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <br>
 <p><b>When Outside</b></p>
 <table style="celllpadding: 100px">
-<!--<tr><td>        </td><td>If after 8AM apply mineral sunscreen to face and wear UV-blocking glasses </td></tr>-->
-<!--<tr><td>        </td><td>If after 8AM Wear hat with wide brim to protect facial skin from UV light </td></tr>-->
+<tr><td>        </td><td>Avoid going outside if UV index > 1</td></tr>
+<tr><td>        </td><td>If UV index higher then use mineral sunscreen, wide brim hat or UV umbrella </td></tr>
 <tr><td>        </td><td>Practice intermittent hypoxic training </td></tr>
 <tr><td>        </td><td>Look far away </td></tr>
 </table>
