--- a/routine.html
+++ b/routine.html
@@ -258,7 +258,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>4:30 PM </td><td>Jump ten times for bone health</td></tr>
 
 <tr><td>        </td><td>&nbsp;</td></tr>
-<tr><td>4:30 PM </td><td>Dinner, as early as possible</td></tr>
+<tr><td>5:00 PM </td><td>Dinner</td></tr>
 <tr><td>        </td><td>Chicken, pearled sorghum, steamed asparagus</td></tr>
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td></tr>
 <tr><td>        </td><td>Berries</td></tr>
@@ -495,6 +495,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No whey protein powder</td></tr>
 <!--<tr><td> </td><td>Minimal iodine if hypothyroid <a href="https://pubmed.ncbi.nlm.nih.gov/12728462/" target="_blank">Link</a> </td></tr>-->
 <tr><td> </td><td>No fluoridated water</td></tr>
+<tr><td> </td><td>No carbonated water, harms teeth</td></tr>
 <tr><td> </td><td>Minimal caffeine</td></tr>
 <tr><td> </td><td>Minimal carbs at breakfast</td></tr>
 <tr><td> </td><td>Minimal fructose</td></tr>
