--- a/routine.html
+++ b/routine.html
@@ -146,7 +146,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <!--<tr><td>        </td><td>Potassium Bicarbonate, Pure Supplements, 1 capsule</td></tr>-->
 <tr><td>        </td><td>Rinse mouth with xylitol </td></tr>
 <tr><td>        </td><td>Run outside a few miles.  Early to avoid UV radiation.</td></tr>
-<tr><td>        </td><td>Jump ten times for bone health</td></tr>
+<tr><td>        </td><td>Jumping for bone health</td></tr>
 <tr><td>        </td><td>Red/infrared light therapy on entire body <a href="https://platinumtherapylights.com/products/biomax-rlt?variant=15601444487234" target="_blank">Link</a> </td></tr> <!-- before sunscreen else it blocks red/IR light?-->
 <!--<tr><td>        </td><td>Exercise including weight lifting, blood flow restriction training, running, interval training</td></tr>-->
 <!--<tr>        <td></td><td>Maragen ionic calcium in two cups of water</td></tr>-->
@@ -263,6 +263,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td></tr>
 <tr><td>        </td><td>Berries</td></tr>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td></tr>
+<tr><td>        </td><td>Walk outside to reduce serum glucose</td></tr>
 
 <tr><td>        </td><td>&nbsp;</td></tr>
 <tr><td>        </td><td>Supplements:</td></tr>
