--- a/routine.html
+++ b/routine.html
@@ -442,7 +442,8 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>Great Plains Labs, GPLTOX</td></tr>
 <tr><td> </td><td>Cyrex Array 10 - Food Immune Reactivity Screen</td></tr>
 <!--<tr><td> </td><td>Cyrex Array 2 - Intestinal Antigenic Permeability Screen</td></tr> --> <!-- Actionable?-->
-<tr><td> </td><td>AgingSOS Advanced Panel, Jinfiniti</td></tr>
+<!--<tr><td> </td><td>AgingSOS Advanced Panel, Jinfiniti</td></tr>-->
+<tr><td> </td><td></td>Carotid Intima-Media Thickness (CIMT) Test</td></tr>
 <tr><td> </td><td>3D cone beam scan of jaws, treat any cavitations found</td></tr>
 </table>
 
