--- a/routine.html
+++ b/routine.html
@@ -263,7 +263,7 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td>        </td><td>Consume a different vegetable every day for a diverse microbiome</td></tr>
 <tr><td>        </td><td>Berries</td></tr>
 <tr><td>        </td><td>Do not overeat.  Put remaining food in a glass jar and vacuum seal for tomorrow</td></tr>
-<tr><td>        </td><td>Walk outside to reduce serum glucose</td></tr>
+<tr><td>        </td><td>Walk outside to reduce glucose, increase insulin sensitivity, and reduce cortisol</td></tr> <!--https://www.drchristianson.com/blog/how-to-lose-weight-with-adrenal-fatigue/-->
 
 <tr><td>        </td><td>&nbsp;</td></tr>
 <tr><td>        </td><td>Supplements:</td></tr>
