--- a/routine.html
+++ b/routine.html
@@ -486,20 +486,18 @@ cd /Users/davidpotter/institutereg_website; git add .; git commit -m "."; git pu
 <tr><td> </td><td>No gluten</td></tr>
 <tr><td> </td><td>No industrial seed oils</td></tr>
 <tr><td> </td><td>No freshwater or farmed fish</td></tr>
-<tr><td> </td><td>Minimal flour</td></tr>
-<tr><td> </td><td>Minimal acellular carbohydrates</td></tr>
+<tr><td> </td><td>Minimal flour / acellular carbohydrates</td></tr>
 <tr><td> </td><td>Minimal linoleic acid</td></tr>
 <tr><td> </td><td>Minimal lectins</td></tr>
 <tr><td> </td><td>Minimal oxalates</td></tr>
-<tr><td> </td><td>Minimal nightshades</td></tr>
-<!--<tr><td> </td><td>Minimal aquaporins</td></tr>-->
+<tr><td> </td><td>Minimal nightshades / aquaporins (spinach, potato)</td></tr>
 <tr><td> </td><td>Minimal protein powders</td></tr>
 <tr><td> </td><td>No whey protein powder</td></tr>
 <!--<tr><td> </td><td>Minimal iodine if hypothyroid <a href="https://pubmed.ncbi.nlm.nih.gov/12728462/" target="_blank">Link</a> </td></tr>-->
 <tr><td> </td><td>No fluoridated water</td></tr>
 <tr><td> </td><td>No carbonated water, harms teeth</td></tr>
 <tr><td> </td><td>Minimal caffeine</td></tr>
-<tr><td> </td><td>Minimal carbs at breakfast</td></tr>
+<!--<tr><td> </td><td>Minimal carbs at breakfast</td></tr>-->
 <tr><td> </td><td>Minimal fructose</td></tr>
 <tr><td> </td><td>No high sugar fruits, berries are preferred</td></tr>
 <!--<tr><td> </td><td>No eating the same foods every day</td></tr>-->
